# aws-lambda-clickhouse-config-in-zookeeper

./: .bandit  .cruft.json  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile_pullrequest  Makefile  README.md  build_local.sh  clickhouse_config_in_zookeeper.py  package.sh  pyproject.toml  repository.yaml
resources/aws-sam-cli/: template.yaml
src/: clickhouse_config_in_zookeeper.py  handler.py
tests/: clickhouse_config_in_zookeeper_tests.py
tests/unit/: clickhouse_config_in_zookeeper_test.py  clickhouse_config_in_zookeeper_tests.py
