[tool.poetry]
name = "aws-lambda-clickhouse-config-in-zookeeper"
version = "0.1.0"
description = "An AWS Lambda that will ensure Zookeeper configuration is kept up-to-date for the Clickhouse cluster"
authors = ["Lee Myring <29373851+thinkstack@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
boto3 = "^1.17.85"
aws-lambda-powertools = "^1.16.1"
aws = "^0.2.5"
timeout-decorator = "^0.5.0"
pytz = "^2021.1"
kazoo = "^2.8.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
httpretty = "^1.1.3"
mock = "^4.0.3"
flake8 = "^3.9.2"
coverage = "^5.5"
moto = "^2.0.8"
testfixtures = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
