[tool.poetry]
name = "aws-lambda-clickhouse-config-in-zookeeper"
version = "0.0.0"
description = "An AWS Lambda that will which injects the 'remote-servers' config into Zookeeper"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
maintainers = ["Team Telemetry"]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
aws-lambda-powertools = "^1.26.0"
boto3 = "^1.24.3"
kazoo = "^2.8.0"
lxml = "^4.6.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
aws-lambda-context = "^1.1.0"
aws-sam-cli = "^1.53.0"
bandit = "^1.7.4"
black = "^21.7b0"
colorama = "^0.4.4"
coverage = "^5.5"
mock = "^4.0.3"
moto = "^3.1.12"
nose = "^1.3.7"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
reorder-python-imports = "^3.1.0"
safety = "^1.10.3"
taskipy = "^1.9.0"
version-incrementor = "^1.5.0"

[tool.taskipy.tasks]
assemble = "./bin/lambda-tools.sh assemble"
bandit = "bandit -r ./src -c .bandit"
black_check = "black --check --diff ./src ./tests"
black_reformat = "black ./src ./tests"
clean = "rm -fr ./build"
cut_release = "./bin/lambda-tools.sh cut_release"
post_functest = "task stop_lambda"
pre_functest = "task assemble && task start_lambda"
prepare_release = "./bin/lambda-tools.sh prepare_release"
publish = "./bin/lambda-tools.sh publish"
publish_checksum_file = "./bin/lambda-tools.sh publish_checksum_file"
publish_s3 = "./bin/lambda-tools.sh publish_artifacts_to_s3"
rename_s3_file = "./bin/lambda-tools.sh rename_artifacts_in_s3"
# Reason for safely skipping check: https://github.com/aws/aws-sam-cli/issues/3691#issuecomment-1099503361
safety = "safety check --ignore=47833 --ignore=49337"
start_lambda = "./bin/start-lambda.sh"
stop_lambda = "./bin/stop-lambda.sh"
test = "task unittest"
unittest = "PYTHONPATH='src' pytest tests/unit --cov=src"
verify = "task test && task black_check && task safety && task bandit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
